Home page load list_projects view. Fix - Validation errors were not showing up in create project form

--- a/labelit/mainapp/static/manage_projects/create.css
+++ b/labelit/mainapp/static/manage_projects/create.css
@@ -6,9 +6,6 @@ form {
     margin: 0 auto;
   }
 
-input {
-  }
-
 .form-text{
   display: table;
 }
@@ -25,4 +22,9 @@ button {
 
 button:hover {
     opacity: 0.8;
+  }
+
+.errorlist
+  {
+      color: red;
   }
